--- a/assets/client/src/pages/internal/containers/common/basic-info/payments-policies/modal/template/tax-list-modal.html
+++ b/assets/client/src/pages/internal/containers/common/basic-info/payments-policies/modal/template/tax-list-modal.html
@@ -10,7 +10,7 @@
 			<th></th>
 		</thead>
 		<tbody>
-			<tr *ngFor="#tax of taxList" [ngClass]="{active: isTaxSelected(tax)}" (click)="selectTax(tax)" class="selectable-row">
+			<tr *ngFor="let tax of taxList" [ngClass]="{active: isTaxSelected(tax)}" (click)="selectTax(tax)" class="selectable-row">
 				<td>{{tax.name}}</td>
 				<td *ngIf="tax.isPercentageValue()">{{tax.value | percentage}}</td>
 				<td *ngIf="tax.isFixedValue()">{{tax.value}} {{ccyCode}}</td>
