--- a/assets/client/src/pages/internal/containers/common/basic-info/payments-policies/pages/tax-list/template/basic-info-tax-list.html
+++ b/assets/client/src/pages/internal/containers/common/basic-info/payments-policies/pages/tax-list/template/basic-info-tax-list.html
@@ -9,7 +9,7 @@
 		<th></th>
 	</thead>
 	<tbody>
-		<tr *ngFor="#tax of taxList">
+		<tr *ngFor="let tax of taxList">
 			<td>{{tax.name}}</td>
 			<td *ngIf="tax.isPercentageValue()">{{tax.value | percentage}}</td>
 			<td *ngIf="tax.isFixedValue()">{{tax.value}} {{ccyCode}}</td>
