--- a/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/add-on-products/template/price-product-edit-add-on-products-section.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/add-on-products/template/price-product-edit-add-on-products-section.html
@@ -1,7 +1,7 @@
 <label>{{ 'Add On Products' | translate }}</label>
 <table class="table table-striped form-group" *ngIf="didInitialize()">
 	<tbody class="input-group">
-		<tr *ngFor="#addOnProduct of addOnProductList">
+		<tr *ngFor="let addOnProduct of addOnProductList">
 			<td>{{addOnProduct.name}}</td>
 			<td>{{ccy.nativeSymbol}} {{addOnProduct.price | price}}</td>
 			<td *ngIf="!readonly">
