--- a/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/constraints/constraints-list/template/price-product-edit-constraints-section.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/constraints/constraints-list/template/price-product-edit-constraints-section.html
@@ -14,7 +14,7 @@
 
 	<table class="table table-striped projects">
 		<tbody>
-			<tr *ngFor="#constraintVM of constraintContainer.constraintVMList">
+			<tr *ngFor="let constraintVM of constraintContainer.constraintVMList">
 				<td>{{constraintVM.displayTitle | translate}}</td>
 				<td>{{constraintVM.displayValue}}</td>
 				<td *ngIf="!readonly">
