--- a/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/filters/template/price-product-edit-filters-section.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/filters/template/price-product-edit-filters-section.html
@@ -14,7 +14,7 @@
 </div>
 <div class="col-md-8 col-sm-8 col-xs-12">
 	<div class="row" *ngIf="didInit">
-		<div class="col-md-6 col-sm-6 col-xs-12" *ngFor="#yieldFilterVM of yieldFilterVMValues">
+		<div class="col-md-6 col-sm-6 col-xs-12" *ngFor="let yieldFilterVM of yieldFilterVMValues">
 			<div class="row">
 				<div class="col-md-6 col-sm-6 col-xs-6">
 					<label class="control-label">{{yieldFilterVM.label | translate}}: </label>
