--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/settings/subcomponents/navbar/template/settings-navbar.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/settings/subcomponents/navbar/template/settings-navbar.html
@@ -2,7 +2,7 @@
 	<div id="sidebar-menu" class="main_menu_side main_menu">
 		<div class="menu_section">
 			<ul class="nav side-menu">
-				<li *ngFor="#settingsPage of settingsPageList" [ngClass]="{'current-page': settingsPage.selected}">
+				<li *ngFor="let settingsPage of settingsPageList" [ngClass]="{'current-page': settingsPage.selected}">
 					<a (click)="changePage(settingsPage)"> 
 						{{settingsPage.pageName | translate}}<span class="pull-right unitpal-font">{{settingsPage.iconFontName}}</span>
 					</a>
