--- a/assets/client/src/pages/internal/containers/common/inventory/customer-register/main/template/customer-register.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/customer-register/main/template/customer-register.html
@@ -1,7 +1,7 @@
 <div class="overview-left" [ngClass]="{'col-xs-9 col-md-9': !isEditing, 'col-xs-3 col-md-3': isEditing}">
 	<div class="lazy-loading-table-filter">
 		<ul class="nav nav-tabs">
-			<li *ngFor="#filter of filterList" [ngClass]="{active : isFilterSelected(filter)}">
+			<li *ngFor="let filter of filterList" [ngClass]="{active : isFilterSelected(filter)}">
 				<a (click)="selectFilter(filter)">{{filter.customerTypeName | translate}}</a>
 			</li>
 		</ul>
