--- a/assets/client/src/pages/internal/containers/common/inventory/customer-register/pages/customer-edit/customer-details/individual/template/individual-customer-details.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/customer-register/pages/customer-edit/customer-details/individual/template/individual-customer-details.html
@@ -36,7 +36,7 @@
 				<div class="input-group">
 					<select class="form-control" [ngModel]="countryCode" (ngModelChange)="didChangeCountryCode($event)">
 						<option [value]="invalidCountryCode" disabled>{{ 'Select a country' | translate }}</option>
-						<option *ngFor="#country of countryList" [value]="country.code">{{country.name}}</option>
+						<option *ngFor="let country of countryList" [value]="country.code">{{country.name}}</option>
 					</select>
 				</div>
 			</div>
