--- a/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/constraints/constraint-modal/template/price-product-constraint-modal.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/constraints/constraint-modal/template/price-product-constraint-modal.html
@@ -10,7 +10,7 @@
 		<div class="col-md-8 col-sm-8 col-xs-8">
 			<div class="form-group">
 				<select class="form-control" [ngModel]="constraintDO.type" (ngModelChange)="didChangeConstraintType($event)">
-					<option *ngFor="#constraintMeta of constraintMetaList" [value]="constraintMeta.constraintType">
+					<option *ngFor="let constraintMeta of constraintMetaList" [value]="constraintMeta.constraintType">
 						{{constraintMeta.title | translate}}
 					</option>
 				</select>
@@ -26,7 +26,7 @@
 	<div class="row" *ngIf="isDaysFromWeekConstraint()">
 		<div class="col-md-12">
 			<div class="btn-group btn-group-lg" role="group">
-				<div class="button-check th-grid-btn" *ngFor="#isoWeekDayVM of isoWeekDayVMList">
+				<div class="button-check th-grid-btn" *ngFor="let isoWeekDayVM of isoWeekDayVMList">
 					<div class="info-block block-info clearfix" title="{{ isoWeekDayVM.name | translate }}">
 						<div data-toggle="buttons">
 							<label class="btn btn-default th-btn-weekday" [ngClass]="{active: constraintDO.constraint.includesDay(isoWeekDayVM.iSOWeekDay)}"
