--- a/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/prices/template/price-product-edit-prices-section.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/prices/template/price-product-edit-prices-section.html
@@ -26,7 +26,7 @@
 		<label>{{ 'Price configuration in %ccySymbol%' | translate:{ccySymbol: ccy.nativeSymbol} }}</label>
 
 		<div class="row" *ngIf="!isPricePerNumberOfPersons">
-			<div class="col-md-6 col-sm-6 col-xs-12 form-group" *ngFor="#singlePriceVM of singlePriceContainer.singlePriceVMList">
+			<div class="col-md-6 col-sm-6 col-xs-12 form-group" *ngFor="let singlePriceVM of singlePriceContainer.singlePriceVMList">
 				<label>{{singlePriceVM.roomCategoryStats.roomCategory.displayName}}</label>
 				<div class="input-group" [ngClass]="{'form-warning': displayError()&&!singlePriceVM.singlePrice.isValid()}">
 					<input type="number" placeholder="{{'Price' | translate}}" class="form-control" [(ngModel)]="singlePriceVM.singlePrice.price"
@@ -36,7 +36,7 @@
 			</div>
 		</div>
 		<div class="row" *ngIf="isPricePerNumberOfPersons">
-			<div class="col-md-12 col-sm-12 col-xs-12" *ngFor="#pricePerPersonVM of pricePerPersonContainer.pricePerPersonVMList">
+			<div class="col-md-12 col-sm-12 col-xs-12" *ngFor="let pricePerPersonVM of pricePerPersonContainer.pricePerPersonVMList">
 				<label>{{pricePerPersonVM.roomCategoryStats.roomCategory.displayName}}</label>
 				<a class="btn" 
 					*ngIf="pricePerPersonVM.previousRoomCategoryId" 
@@ -47,7 +47,7 @@
 					<div class="col-md-6 col-sm-6 col-xs-6">
 						<label><small>{{ 'Price For Adults' | translate }}*</small></label>
 						<div class="row">
-							<div class="col-md-12 col-sm-12 col-xs-12 form-group" *ngFor="#pricePerAdult of pricePerPersonVM.pricePerPerson.adultsPriceList">
+							<div class="col-md-12 col-sm-12 col-xs-12 form-group" *ngFor="let pricePerAdult of pricePerPersonVM.pricePerPerson.adultsPriceList">
 								<div class="input-group" [ngClass]="{'form-warning': displayError()&&!pricePerAdult.isValid()}">
 									<span class="input-group-addon"><small>{{pricePerAdult.noOfPersons}}{{getNumberSuffix(pricePerAdult.noOfPersons)}}</small> <span class="unitpal-font">:</span></span>
 									<input type="number" class="form-control" [(ngModel)]="pricePerAdult.price"
@@ -60,7 +60,7 @@
 					<div class="col-md-6 col-sm-6 col-xs-6">
 						<label><small>{{ 'Price For Children' | translate }}*</small></label>
 						<div class="row">
-							<div class="col-md-12 col-sm-12 col-xs-12 form-group" *ngFor="#pricePerChild of pricePerPersonVM.pricePerPerson.childrenPriceList">
+							<div class="col-md-12 col-sm-12 col-xs-12 form-group" *ngFor="let pricePerChild of pricePerPersonVM.pricePerPerson.childrenPriceList">
 								<div class="input-group" [ngClass]="{'form-warning': displayError()&&!pricePerChild.isValid()}">
 									<span class="input-group-addon"><small>{{pricePerChild.noOfPersons}}{{getNumberSuffix(pricePerChild.noOfPersons)}}</small> <span class="unitpal-font">;</span></span>
 									<input type="number" class="form-control" [(ngModel)]="pricePerChild.price"
