--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/settings/subcomponents/basic-information/main/template/settings-basic-information.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/settings/subcomponents/basic-information/main/template/settings-basic-information.html
@@ -1,7 +1,7 @@
 <div class="row card page-info">
 	<div class="col-xs-12 col-md-12 th-padding-bottom">
 		<ul class="nav nav-tabs">
-			<li *ngFor="#basicInfoPage of basicInfoPageList" [ngClass]="{'active': basicInfoPage.selected}">
+			<li *ngFor="let basicInfoPage of basicInfoPageList" [ngClass]="{'active': basicInfoPage.selected}">
 				<a (click)="changePage(basicInfoPage)">
 					{{basicInfoPage.pageName | translate}}
 				</a>
