--- a/assets/client/src/pages/internal/containers/wizard/pages/utils/navbar/template/wizard-navbar-component.html
+++ b/assets/client/src/pages/internal/containers/wizard/pages/utils/navbar/template/wizard-navbar-component.html
@@ -3,7 +3,7 @@
 	<div id="sidebar-menu" class="main_menu_side main_menu">
 		<div class="menu_section">
 			<ul class="nav side-menu">
-				<li *ngFor="#wizardStateMeta of wizardStateMetaList" [ngClass]="{'current-page': isCurrentState(wizardStateMeta.stateIndex), 'disabled-page': !wasVisited(wizardStateMeta.stateIndex)}">
+				<li *ngFor="let wizardStateMeta of wizardStateMetaList" [ngClass]="{'current-page': isCurrentState(wizardStateMeta.stateIndex), 'disabled-page': !wasVisited(wizardStateMeta.stateIndex)}">
 					<a (click)="moveToState(wizardStateMeta.stateIndex)">{{wizardStateMeta.meta.name}} 
 						<span class="pull-right unitpal-font">{{wizardStateMeta.meta.iconFontName}}</span>
 					</a>
