ui fixes & changes

--- a/assets/client/src/common/utils/components/file-attachments/template/file-attachments.html
+++ b/assets/client/src/common/utils/components/file-attachments/template/file-attachments.html
@@ -1,5 +1,5 @@
 <div class="row">
-	<div class="col-md-6 col-xs-6">
+	<div class="col-md-6 col-xs-6 form-group">
 		<label>{{ 'File Attachments' | translate }}</label>
 		<i class="fa fa-spinner fa-pulse" *ngIf="isLoading"></i>
 	</div>
