--- a/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/cancellation/template/price-product-edit-cancellation-section.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/cancellation/template/price-product-edit-cancellation-section.html
@@ -1,6 +1,6 @@
 <div class="col-md-6 col-sm-6 col-sm-6" *ngIf="didInit">
 	<div class="row">
-		<div class="col-xs-12">
+		<div class="col-xs-12 form-group">
 			<label>{{ 'Cancellation Policy' | translate }}</label>
 		</div>
 	</div>
@@ -44,7 +44,7 @@
 
 <div class="col-md-6 col-sm-6 col-sm-6" *ngIf="didInit">
 	<div class="row">
-		<div class="col-xs-12">
+		<div class="col-xs-12 form-group">
 			<label>{{ 'Cancellation Penalty' | translate }}</label>
 		</div>
 	</div>
