--- a/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/notes/template/price-product-edit-notes-section.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/notes/template/price-product-edit-notes-section.html
@@ -1,4 +1,4 @@
-<div class="col-md-12 col-xs-12 " [ngFormModel]="getDefaultControlGroup()">
+<div class="col-md-12 col-xs-12 form-group" [ngFormModel]="getDefaultControlGroup()">
 	<label>{{ 'Notes' | translate }}</label>
 	<div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('notes')}">
 		<textarea class="form-control" ngControl="notes" [readonly]="readonly"></textarea>
