--- a/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/constraints/constraint-modal/template/price-product-constraint-modal.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/constraints/constraint-modal/template/price-product-constraint-modal.html
@@ -4,7 +4,7 @@
 </div>
 <div class="modal-body">
 	<div class="row">
-		<div class="col-md-4 col-sm-4 col-xs-4">
+		<div class="col-md-4 col-sm-4 col-xs-4 form-group">
 			<label>{{ 'Type of Constraint' | translate }}</label>
 		</div>
 		<div class="col-md-8 col-sm-8 col-xs-8">
