--- a/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/constraints/constraints-list/template/price-product-edit-constraints-section.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/constraints/constraints-list/template/price-product-edit-constraints-section.html
@@ -1,6 +1,6 @@
 <div class="col-md-12">
 	<div class="row">
-		<div class="col-xs-12">
+		<div class="col-xs-12 form-group">
 			<label>{{ 'Constraints' | translate }}</label>
 		</div>
 	</div>
