--- a/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/top-section/template/price-product-edit-top-section.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/top-section/template/price-product-edit-top-section.html
@@ -1,11 +1,11 @@
 <div class="col-md-4 col-xs-12 form-group" [ngFormModel]="getDefaultControlGroup()">
+	<label>{{ 'Price Product Name' | translate }}*</label>
 	<div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('name')}">
-		<label>{{ 'Price Product Name' | translate }}*</label>
 		<input type="text" class="form-control input-group-lg" ngControl="name" [readonly]="readonly">
 	</div>
 	<label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Enter a name for the product' | translate }}</small></label>
 </div>
-<div class="col-md-4 col-xs-12">
+<div class="col-md-4 col-xs-12 form-group">
 	<label>{{ 'Availability' | translate }}</label>
 	<div class="input-group">
 		<div class="btn-group" data-toggle="buttons">
@@ -19,7 +19,7 @@
 	</div>
 	<small class="text-muted"><i class="fa fa-info-circle"></i>  {{ 'If public, it will be bookable by anyone. If Confidential, you will need to add it from specific customer profiles' | translate }}</small>
 </div>
-<div class="col-md-4 col-xs-12 ">
+<div class="col-md-4 col-xs-12 form-group">
 	<label for="roomname">{{ 'Last Room Availability' | translate }}</label>
 	<div class="input-group">
 		<div class="btn-group" data-toggle="buttons">
