--- a/assets/client/static-assets/css/unitpal.css
+++ b/assets/client/static-assets/css/unitpal.css
@@ -155,11 +155,12 @@ header {
 .card-header{
     border-bottom: 1px solid #ccc;
     height: 70px;
+    overflow: hidden;
 }
 
 .card-header h1 {
     padding: 0 6px 6px;
-    font-size: 24px;
+    font-size: 22px;
 }
 
 .card-header h1,
@@ -342,6 +343,9 @@ table .buttons,table button,table .btn {
     border-left: 1px solid #ccc;
     padding: 0 0 0 24px;
     height: 100%;
+}
+.overview-right h1 {
+    font-size: 22px; 
 }
 
 .overview-left {
@@ -531,6 +535,9 @@ lazy-loading-table .table-wrapper table thead {
     *  TO fix this we substract 82px (card-header height + padding), this is a quick fix that work but we should find something smarter.
     */
     height: calc(100% - 70px)
+}
+.card-body h3 {
+    font-size: 20px;
 }
 
 /* Theme structure */
@@ -800,7 +807,7 @@ input[type="file"] {
 }
 
 .th-img-upload-container {
-    width:250px;
+    width:100%;
 }
 
 .th-img-upload-preview {
@@ -863,4 +870,8 @@ input[type="file"] {
 }
 .th-padding-bottom {
     padding-bottom: 12px;
+}
+.form-group > label {
+    font-size: 12px;
+    font-weight: bold;
 }
