--- a/assets/client/src/pages/internal/containers/common/inventory/customer-register/pages/customer-edit/customer-details/corporate/template/corporate-customer-details.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/customer-register/pages/customer-edit/customer-details/corporate/template/corporate-customer-details.html
@@ -107,7 +107,7 @@
 		</div>
 	</div>
 	<div class="row">
-		<div class="col-md-4 col-xs-12">
+		<div class="col-md-4 col-xs-12 form-group">
 			<label>{{ 'Pay Invoice By Agreement' | translate }}</label>
 			<div class="input-group">
 				<div class="btn-group" data-toggle="buttons">
@@ -141,7 +141,7 @@
 		</div>
 	</div>
 	<div class="row">
-		<div class="col-md-4 col-xs-12">
+		<div class="col-md-4 col-xs-12 form-group">
 			<label>{{ 'Type of Commission' | translate }}</label>
 			<div class="input-group">
 				<div class="btn-group" data-toggle="buttons">
